@@ -69,6 +69,16 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.9</version>
+		</dependency>
+		<dependency>
+			<groupId>net.bytebuddy</groupId>
+			<artifactId>byte-buddy</artifactId>
+			<version>1.9.12</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -77,16 +87,38 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!--flyway数据迁移-->
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<version>6.0.8</version>
+				<configuration>
+					<url>jdbc:mysql://localhost:3306/blog</url>
+					<user>root</user>
+					<password>root</password>
+				</configuration>
+			</plugin>
 			<!--单元测试-->
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.2</version>
+				<configuration>
+					<!--<argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>-->
+					<excludes>
+						<exclude>**/*IntegrationTest</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 			<!--集成测试-->
-			<!--<plugin>-->
-				<!--<artifactId>maven-failsafe-plugin</artifactId>-->
-				<!--<version>2.22.2</version>-->
-			<!--</plugin>-->
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<includes>
+						<include>**/*IntegrationTest</include>
+					</includes>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
